resources/hive-integration/uhc-integration/clusters-mgmt.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 5m
  name: clusters-mgmt
spec:
  host: api-integration.6943.hive-integration.openshiftapps.com
  path: "/api/clusters_mgmt"
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: clusters-service
    weight: 100
