resources/hive-integration/uhc-integration/portal-server.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: portal-server
  namespace: uhc-integration
spec:
  host: cloud-integration.6943.hive-integration.openshiftapps.com
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: portal-server
    weight: 100
