resources/hive-integration/uhc-integration/service-logs.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 5m
  name: service-logs
spec:
  host: api-integration.6943.hive-integration.openshiftapps.com
  path: "/api/service_logs"
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: ocm-service-log
    weight: 100
